[metadata]
name = Mask-Prometheus
version = attr: mask_prometheus.__version__
url = https://github.com/Eastwu5788/Mask-Prometheus
project_urls =
    Document = https://github.com/Eastwu5788/Mask-Prometheus
    Source Code = https://github.com/Eastwu5788/Mask-Prometheus
    Issue = https://github.com/Eastwu5788/Mask-Prometheus/issues
license = MIT
author = Wu Dong
author_email = wudong@eastwu.cn
description = Prometheus extension for Mask.
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
include_package_data = true
python_requires = >= 3.6

[options.packages.find]
include = mask_prometheus, mask_prometheus.*